change the html file to index instead of main

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <!-- Header -->
     <header class="nav">
+        <h1>Hello!</h1>
         <nav class="navbar navbar-expand navbar-li bg-li">
             <div class="container">
-                <a class="navbar-home" href="main.html"></a>
+                <a class="navbar-home" href="index.html">
+                    <!-- <img src="" alt=""> -->
+                </a>
             </div>
         </nav>
     </header>
