--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The most fabulous restaurant for those who does not want to spend a fortune on good meals!
+    This gem is located in Gothenburg, Sweden and is open from 11.00 to 22.00 every day of the week! ">
+    <meta name="keywords" content="restaurant, fabulous restaurant, good meals, Gothenburg, Sweden, 11.00 to 22.00">
+
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Ankarloo Restaurant</title>
     <!-- insert an icon used for the restaurant brand -->
 </head>
 
 <body>
     <!-- Header -->
-    <header class="nav">
+    <header class="header-nav">
         <h1>Hello!</h1>
         <nav class="navbar navbar-expand navbar-li bg-li">
             <div class="container">
