remove the placeholder hello! and add Ankarloo Restaurant instead

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Header -->
     <header class="header-nav">
-        <h1>Hello!</h1>
+        <h1>Ankarloo Restaurant</h1>
         <nav class="navbar navbar-expand navbar-li bg-li">
             <div class="container">
                 <a class="navbar-home" href="index.html">
