Set up a boilerplate for index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@
             </div>
         </nav>
     </header>
+    <section>
+        <!-- welcome banner -->
+        welcome banner
+    </section>
+    <section>
+        <!-- main body -->
+        main body
+    </section>
+    <section>
+        <!-- Contacts and mail -->
+        contacts and mail 
+    </section>
+    <footer>
+        <!-- footer -->
+        social media
+    </footer>
 </body>
 
 </html> 
