--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
 
 <body>
     <!-- Header -->
-    <header class="header-nav">
+    <a href="index.html">
         <h1 id="logo">Ankarloo Restaurant</h1>
-        <nav class="navbar navbar-expand navbar-li bg-li">
-            <div class="container">
-                <a class="navbar-home" href="index.html">
-                    <!-- <img src="" alt=""> -->
-                </a>
-            </div>
-        </nav>
+    </a>
+    <header class="header-nav">
+        <nav class="navbar"></nav>
     </header>
     <section>
         <!-- welcome banner -->
