--- a/index.html
+++ b/index.html
@@ -14,11 +14,26 @@
 
 <body>
     <!-- Header -->
-    <a href="index.html">
-        <h1 id="logo">Ankarloo Restaurant</h1>
-    </a>
     <header class="header-nav">
-        <nav class="navbar"></nav>
+        <a href="index.html">
+            <h1 id="logo">Ankarloo Restaurant</h1>
+        </a>
+        <nav class="navbar">
+            <ul>
+                <li> 
+                    <a href="">Menu</a>
+                </li>
+                <li>
+                    <a href="">Book Table</a> 
+                </li>
+                <li>
+                    <a href="">Email contact</a>
+                </li>
+                <li>
+                    <a href="">Social media</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <section>
         <!-- welcome banner -->
