Add divs, classes and ids to each corresponding element in index.hmtl, clean up code structure and comments

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <!-- Header -->
     <header class="header-nav">
         <a href="index.html">
@@ -20,7 +21,7 @@
         </a>
         <nav class="navbar">
             <ul>
-                <li> 
+                <li>
                     <a href="">Menu</a>
                 </li>
                 <li>
@@ -35,21 +36,42 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <!-- welcome banner -->
-        welcome banner
+
+    <!-- welcome banner -->
+    <section class="welcome-banner">
+        <div id="pic-collection">
+
+        </div>
     </section>
-    <section>
-        <!-- main body -->
-        main body
+
+    <!-- main body -->
+    <section class="main-body">
+        <div id="menu">
+
+        </div>
+        <div id="book-table">
+
+        </div>
     </section>
-    <section>
-        <!-- Contacts and mail -->
-        contacts and mail 
+
+    <!-- Contacts and mail -->
+    <section class="contacts-and-email">
+        <div id="email-form">
+
+        </div>
+        <div id="contacts">
+
+        </div>
     </section>
-    <footer>
-        <!-- footer -->
-        social media
+
+    <!-- footer -->
+    <footer id="footer">
+        <ul>
+            <li>facebook</li>
+            <li>instagram</li>
+            <li>twitter</li>
+            <li>pinterest</li>
+        </ul>
     </footer>
 </body>
 
