Add placeholder text for each div, then add a colour to each section and the footer to more easily separate them for block sizes

--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
     <!-- welcome banner -->
     <section class="welcome-banner">
         <div id="pic-collection">
-
+stuff
         </div>
     </section>
 
     <!-- main body -->
     <section class="main-body">
         <div id="menu">
-
+stuff
         </div>
         <div id="book-table">
-
+stuff
         </div>
     </section>
 
     <!-- Contacts and mail -->
     <section class="contacts-and-email">
         <div id="email-form">
-
+stuff
         </div>
         <div id="contacts">
-
+stuff
         </div>
     </section>
 
