Give each major block of structure a colour, and add the height, width and margin to each element necessary to clearly show the structure of the webbpage

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ stuff
     <!-- main body -->
     <section class="main-body">
         <div id="menu">
-stuff
+menu
         </div>
         <div id="book-table">
-stuff
+book table
         </div>
     </section>
 
