connect the links for the navbar shortcuts

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <nav class="navbar">
             <ul>
                 <li>
-                    <a href="">Menu</a>
+                    <a href="#menu">Menu</a>
                 </li>
                 <li>
-                    <a href="">Book Table</a> 
+                    <a href="#book-table">Book Table</a> 
                 </li>
                 <li>
-                    <a href="">Email contact</a>
+                    <a href="#email-form">Email contact</a>
                 </li>
                 <li>
-                    <a href="">Social media</a>
+                    <a href="#footer">Social media</a>
                 </li>
             </ul>
         </nav>
