Add the pictures to images folder, and set coffeemug.jpg as the welcome banner

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <!-- welcome banner -->
     <section class="welcome-banner">
-        <div id="pic-collection">
-stuff
+        <div id="welcome-pic">
+
         </div>
     </section>
 
