Create a welcome-text and add the necessary rules for it to stay visible above the welcome-pic

--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
 
     <!-- welcome banner -->
     <section class="welcome-banner">
-        <div id="welcome-pic">
-
+        <div id="welcome-pic"></div>
+        <div id="welcome-text">
+            <h2>
+                Happy? No?
+            </h2>
+            <p>
+                Have a coffee!
+            </p>
         </div>
     </section>
 
