Change the plan from a restaurant to a cafe, add the list of available products for the menu

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         <div id="welcome-pic"></div>
         <div id="welcome-text">
             <h2>
-                Happy? No?
+                Happy?
+            </h2>
+            <h2>
+                No?
             </h2>
             <p>
                 Have a coffee!
@@ -53,7 +56,39 @@
     <!-- main body -->
     <section class="main-body">
         <div id="menu">
-menu
+            <div id="drinks">
+                <h2>
+                    DRINKS
+                </h2>
+                <ul>
+                    <li>Espresso</li>
+                    <li>Double Espresso</li>
+                    <li>Latte</li>
+                    <li>Cappuchino</li>
+                    <li>Mocha</li>
+                    <li>Flat white</li>
+                    <li>Earl Grey</li>
+                    <li>English Breakfast</li>
+                </ul>
+            </div>
+            <div>
+                favicon
+            </div>
+            <div id="desserts">
+                <h2>
+                    DESSERTS
+                </h2>
+                <ul>
+                    <li>Cinnamonbun</li>
+                    <li>Chocolate Muffin</li>
+                    <li>Blueberry Pie</li>
+                    <li>Mudcake</li>
+                    <li>Carrotcake</li>
+                    <li>Chocolate Scone</li>
+                    <li>Croissant</li>
+                    <li>Pain Au Chocolaite</li>
+                </ul>
+            </div>
         </div>
         <div id="book-table">
 book table
