Add the base structure for the menu of drinks and desserts

--- a/index.html
+++ b/index.html
@@ -71,9 +71,6 @@
                     <li>English Breakfast</li>
                 </ul>
             </div>
-            <div>
-                favicon
-            </div>
             <div id="desserts">
                 <h2>
                     DESSERTS
@@ -88,6 +85,9 @@
                     <li>Croissant</li>
                     <li>Pain Au Chocolaite</li>
                 </ul>
+            </div>
+            <div id="coffeemug-icon">
+                favicon
             </div>
         </div>
         <div id="book-table">
