further increase the structure for the menu, and start working on the h2 for each div

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                     DRINKS
                 </h2>
                 <ul>
-                    <li>Espresso</li>
-                    <li>Double Espresso</li>
-                    <li>Latte</li>
-                    <li>Cappuchino</li>
-                    <li>Mocha</li>
-                    <li>Flat white</li>
-                    <li>Earl Grey</li>
-                    <li>English Breakfast</li>
+                    <li class="items">S/L Espresso</li>
+                    <li class="items">S/L Double Espresso</li>
+                    <li class="items">S/L Latte</li>
+                    <li class="items">S/L Cappuchino</li>
+                    <li class="items">S/L Mocha</li>
+                    <li class="items">S/L Flat white</li>
+                    <li class="items">S/L Earl Grey</li>
+                    <li class="items">S/L English Breakfast</li>
                 </ul>
             </div>
             <div id="desserts">
@@ -76,14 +76,14 @@
                     DESSERTS
                 </h2>
                 <ul>
-                    <li>Cinnamonbun</li>
-                    <li>Chocolate Muffin</li>
-                    <li>Blueberry Pie</li>
-                    <li>Mudcake</li>
-                    <li>Carrotcake</li>
-                    <li>Chocolate Scone</li>
-                    <li>Croissant</li>
-                    <li>Pain Au Chocolaite</li>
+                    <li class="items">Cinnamonbun</li>
+                    <li class="items">Chocolate Muffin</li>
+                    <li class="items">Blueberry Pie</li>
+                    <li class="items">Swedish Mudcake</li>
+                    <li class="items">Carrotcake</li>
+                    <li class="items">Chocolate Scone</li>
+                    <li class="items">Croissant</li>
+                    <li class="items">Pain Au Chocolaite</li>
                 </ul>
             </div>
             <div id="coffeemug-icon">
