Change the background color to a coffee theme, import the coffee favicon and round the corners for main body

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 <h2>
                     DRINKS
                 </h2>
+                <hr>
                 <ul>
                     <li class="items">S/L Espresso</li>
                     <li class="items">S/L Double Espresso</li>
@@ -75,6 +76,7 @@
                 <h2>
                     DESSERTS
                 </h2>
+                <hr>
                 <ul>
                     <li class="items">Cinnamonbun</li>
                     <li class="items">Chocolate Muffin</li>
@@ -87,7 +89,7 @@
                 </ul>
             </div>
             <div id="coffeemug-icon">
-                favicon
+                <i class="fa-solid fa-mug-saucer"></i>
             </div>
         </div>
         <div id="book-table">
@@ -114,6 +116,9 @@ stuff
             <li>pinterest</li>
         </ul>
     </footer>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/f6b99ec6cf.js" crossorigin="anonymous"></script>
 </body>
 
 </html> 
