Add more pictures to use in the webbpage, and change the booktable into a div that contains 1 or 2 pictures

--- a/index.html
+++ b/index.html
@@ -92,8 +92,13 @@
                 <i class="fa-solid fa-mug-saucer"></i>
             </div>
         </div>
-        <div id="book-table">
-book table
+        <div id="menu-picture">
+            <div id="menu-pic1">
+
+            </div>
+            <div id="menu-pic2">
+
+            </div>
         </div>
     </section>
 
