add the favicons for the social media links and style them, as well as insert actual functional links that will open in a new tab

--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
     <!-- Header -->
     <header class="header-nav">
         <a href="index.html">
-            <h1 id="logo">Ankarloo Restaurant</h1>
+            <h1 id="logo">Ankarloo Coffee-shop</h1>
         </a>
         <nav class="navbar">
             <ul>
                 <li>
                     <a href="#menu">Menu</a>
-                </li>
-                <li>
-                    <a href="#book-table">Book Table</a> 
                 </li>
                 <li>
                     <a href="#email-form">Email contact</a>
@@ -115,10 +112,10 @@ stuff
     <!-- footer -->
     <footer id="footer">
         <ul>
-            <li>facebook</li>
-            <li>instagram</li>
-            <li>twitter</li>
-            <li>pinterest</li>
+            <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
+            <li><a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-square-twitter"></i></a></li>
+            <li><a href="https://www.pinterest.se/" target="_blank"><i class="fa-brands fa-square-pinterest"></i></a></li>
         </ul>
     </footer>
 
