add prices instead of sizes for the menu, add the location and email/phone contact and style it

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                 </h2>
                 <hr>
                 <ul>
-                    <li class="items">S/L Espresso</li>
-                    <li class="items">S/L Double Espresso</li>
-                    <li class="items">S/L Latte</li>
-                    <li class="items">S/L Cappuchino</li>
-                    <li class="items">S/L Mocha</li>
-                    <li class="items">S/L Flat white</li>
-                    <li class="items">S/L Earl Grey</li>
-                    <li class="items">S/L English Breakfast</li>
+                    <li class="items">25kr Espresso</li>
+                    <li class="items">30kr Double Espresso</li>
+                    <li class="items">49kr Latte</li>
+                    <li class="items">45kr Cappuchino</li>
+                    <li class="items">49kr Mocha</li>
+                    <li class="items">30kr Americano</li>
+                    <li class="items">20kr Earl Grey</li>
+                    <li class="items">20kr English Breakfast</li>
                 </ul>
             </div>
             <div id="desserts">
@@ -75,14 +75,14 @@
                 </h2>
                 <hr>
                 <ul>
-                    <li class="items">Cinnamonbun</li>
-                    <li class="items">Chocolate Muffin</li>
-                    <li class="items">Blueberry Pie</li>
-                    <li class="items">Swedish Mudcake</li>
-                    <li class="items">Carrotcake</li>
-                    <li class="items">Chocolate Scone</li>
-                    <li class="items">Croissant</li>
-                    <li class="items">Pain Au Chocolaite</li>
+                    <li class="items">35kr Cinnamonbun</li>
+                    <li class="items">35kr Chocolate Muffin</li>
+                    <li class="items">45kr Blueberry Pie</li>
+                    <li class="items">45kr Swedish Mudcake</li>
+                    <li class="items">50kr Carrotcake</li>
+                    <li class="items">25kr Chocolate Scone</li>
+                    <li class="items">30kr Croissant</li>
+                    <li class="items">30kr Pain Au Chocolaite</li>
                 </ul>
             </div>
             <div id="coffeemug-icon">
@@ -105,7 +105,21 @@
 stuff
         </div>
         <div id="contacts">
-stuff
+            <div id="location">
+                <h2>Location</h2>
+                <p>
+                    Lärkgatan 34, Gothenburg, Sweden
+                </p>
+            </div>
+            <div id="phone-and-email">
+                <h2>Phone and Email</h2>
+                <p>
+                    Tel: +46 71 231 23 12
+                </p>
+                <p>
+                    email: ankarloocafe@123.com
+                </p>
+            </div>
         </div>
     </section>
 
